# pytest-variables

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  Pipfile  README.rst  development.rst  pyproject.toml  pytest_variables.py  setup.py  test_variables.py  tox.ini  variables.json
.github/workflows/: nightly.yml  publish.yml  test.yml
pytest_variables/: errors.py  plugin.py
src/pytest_variables/: errors.py  plugin.py
tests/: test_variables.py
